--- a/homepage.css
+++ b/homepage.css
@@ -153,3 +153,10 @@ nav a{
     bottom: 614px;
     height: 400px;
 }
+
+.background2{
+    background-color: #FFF8F0;
+    position: relative;
+    bottom: 635px;
+    height: 400px;
+}
