--- a/corb_page.css
+++ b/corb_page.css
@@ -53,21 +53,36 @@ nav a{
 
 .corb_button{
     background-color: #926239;
-    width: 130px;
+    width: 135px;
     height: 45px;
     border-radius: 25px;
     color: #FFFFFF;
     font-size: 23px;
-    border: 1px solid #F5E9DA;
     padding-bottom: 10px;
     margin-top: 27px;
-    margin-left: 180px;
+    margin-left: 160px;
+    border: 3px solid #6B492B;
 }
 
 .corb_button img{
-    width: 30px;
+    width: 25px;
     padding-left: 5px;
     padding-top: 5px;
+}
+
+.null{
+    font-size: 21px;
+    background-color: #FFFFFF;
+    border: 3px solid #CFCFCF;
+    height: 30px;
+    width: 20px;
+    position: relative;
+    border-radius: 25px;
+    padding-left: 8px;
+    padding-top: 5px;
+    color: #926239;
+    right: 15px;
+    bottom: 5px;
 }
 
 .your_corb{
