--- a/corb_page_order.css
+++ b/corb_page_order.css
@@ -32,7 +32,7 @@ nav a{
     height: 40px;
     margin-left: 110px;
     margin-top: 20px;
-    color: #A58B71;
+    color: #CBAE92;
     font-size: 18px;
     padding-top: 15px;
     padding-left: 10px;
@@ -93,57 +93,229 @@ main h1{
 
 .name{
     background-color: #F5E9DA;
-    width: 400px;
+    width: 600px;
     height: 50px;
     border-radius: 20px;
+    position: relative;
+    left: 30px;
+    top: 110px;
 }
 
 .your_name{
     color: #A58B71;
     font-size: 30px;
     position: relative;
+    bottom: 50px;
 }
 
 .write_your_name{
     color: #CBAE92;
     font-size: 20px;
     position: relative;
+    bottom: 50px;
+    left: 15px;
 }
 
 .adress{
     background-color: #F5E9DA;
-    width: 400px;
+    width: 600px;
     height: 50px;
     border-radius: 20px;
+    position: relative;
+    left: 30px;
+    top: 170px;
 }
 
 .your_adress{
     color: #A58B71;
     font-size: 30px;
     position: relative;
+    bottom: 50px;
 }
 
 .write_your_adress{
     color: #CBAE92;
     font-size: 20px;
     position: relative;
+    bottom: 50px;
+    left: 15px;
 }
 
 .phone_number{
     background-color: #F5E9DA;
-    width: 400px;
+    width: 600px;
     height: 50px;
     border-radius: 20px;
+    position: relative;
+    left: 30px;
+    top: 230px;
 }
 
 .your_number{
     color: #A58B71;
     font-size: 30px;
     position: relative;
+    bottom: 50px;
 }
 
 .write_your_number{
     color: #CBAE92;
     font-size: 20px;
     position: relative;
+    bottom: 50px;
+    left: 15px;
+}
+
+.message{
+    background-color: #F5E9DA;
+    width: 600px;
+    height: 188px;
+    border-radius: 20px;
+    position: relative;
+    left: 30px;
+    top: 300px;
+}
+
+.your_message{
+    color: #A58B71;
+    font-size: 30px;
+    position: relative;
+    bottom: 50px;
+}
+
+.write_your_message{
+    color: #CBAE92;
+    font-size: 20px;
+    position: relative;
+    bottom: 50px;
+    left: 15px;
+}
+
+.order_bottom{
+    font-size: 30px;
+    border: 4px solid #6B492B;
+    border-radius: 30px;
+    box-shadow: 7px 7px 4px 0px rgb(182, 182, 182);
+    position: relative;
+    top: 400px;
+    left: 25px;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #926239;
+    color: #FFFFFF;
+}
+
+footer{
+    background-color: #F5E9DA;
+    width: 100%;
+    height: 220px;
+    position: relative;
+    top: 520px;
+}
+
+.logo_footer{
+    position: relative;
+    top: 60px;
+    left: 20px;
+    margin-left: 30px;
+}
+
+.open_time_name{
+    color: #A58B71;
+    font-size: 22px;
+    position: relative;
+    bottom: 65px;
+    left: 350px;
+}
+
+.weekdays{
+    color: #CBAE92;
+    font-size: 19px;
+    position: relative;
+    left: 345px;
+    bottom: 65px;
+}
+
+.weekends{
+    color: #CBAE92;
+    font-size: 19px;
+    position: relative;
+    left: 345px;
+    bottom: 75px;
+}
+
+.holiday_days{
+    color: #CBAE92;
+    font-size: 19px;
+    position: relative;
+    left: 280px;
+    bottom: 85px;
+}
+
+.ours_bakerys_name{
+    color: #A58B71;
+    font-size: 22px;
+    position: relative;
+    bottom: 240px;
+    left: 725px;
+}
+
+.adress1{
+    color: #CBAE92;
+    font-size: 19px;
+    position: relative;
+    left: 670px;
+    bottom: 248px;
+}
+
+.adress2{
+    color: #CBAE92;
+    font-size: 19px;
+    position: relative;
+    left: 670px;
+    bottom: 265px;
+}
+
+.adress3{
+    color: #CBAE92;
+    font-size: 19px;
+    position: relative;
+    left: 670px;
+    bottom: 279px;
+}
+
+
+.location1{
+    width: 18px;
+}
+
+.location2{
+    width: 18px;
+}
+
+.location3{
+    width: 18px;
+}
+
+.ours_social_name{
+    color: #A58B71;
+    font-size: 22px;
+    position: relative;
+    bottom: 435px;
+    left: 1060px;
+}
+
+.facebook{
+    width: 40px;
+    position: relative;
+    left: 1090px;
+    bottom: 430px;
+}
+
+.instagram{
+    width: 40px;
+    position: relative;
+    left: 1095px;
+    bottom: 430px;
 }
