--- a/corb_page.css
+++ b/corb_page.css
@@ -25,13 +25,13 @@ nav a{
     margin-left: 25px;
 }
 
-.find{
+.form-control{
     border: 3px solid #FFF8F0;
     border-radius: 10px;
     width: 310px;
-    height: 40px;
+    height: 50px;
     margin-left: 110px;
-    margin-top: 20px;
+    margin-top: 30px;
     color: #A58B71;
     font-size: 18px;
     padding-top: 15px;
@@ -39,7 +39,7 @@ nav a{
 
 }
 
-.find_button{
+.btn-search{
     background-color: #FFF8F0;
     width: 115px;
     height: 45px;
@@ -47,11 +47,11 @@ nav a{
     color: #A58B71;
     font-size: 22px;
     border: 1px solid #FFF8F0;
-    margin-top: 27px;
+    margin-top: 5px;
     margin-left: 15px;
 }
 
-.corb_button{
+.cart-btn{
     background-color: #926239;
     width: 135px;
     height: 45px;
@@ -59,18 +59,18 @@ nav a{
     color: #FFFFFF;
     font-size: 23px;
     padding-bottom: 10px;
-    margin-top: 27px;
+    margin-top: 38px;
     margin-left: 160px;
     border: 3px solid #6B492B;
 }
 
-.corb_button img{
+.cart-btn img{
     width: 25px;
     padding-left: 5px;
     padding-top: 5px;
 }
 
-.null{
+.cart-counter{
     font-size: 21px;
     background-color: #FFFFFF;
     border: 3px solid #CFCFCF;
@@ -81,8 +81,8 @@ nav a{
     padding-left: 8px;
     padding-top: 5px;
     color: #926239;
-    right: 15px;
-    bottom: 5px;
+    right: 17px;
+    bottom: -19px;
 }
 
 .your_corb{
