--- a/css/corb_page_order.css
+++ b/css/corb_page_order.css
@@ -25,21 +25,21 @@ nav a{
     margin-left: 25px;
 }
 
-.find{
+.form-control{
     border: 3px solid #FFF8F0;
     border-radius: 10px;
     width: 310px;
-    height: 40px;
+    height: 50px;
     margin-left: 110px;
-    margin-top: 20px;
-    color: #CBAE92;
+    margin-top: 30px;
+    color: #A58B71;
     font-size: 18px;
     padding-top: 15px;
     padding-left: 10px;
 
 }
 
-.find_button{
+.btn-search{
     background-color: #FFF8F0;
     width: 115px;
     height: 45px;
@@ -47,7 +47,7 @@ nav a{
     color: #A58B71;
     font-size: 22px;
     border: 1px solid #FFF8F0;
-    margin-top: 27px;
+    margin-top: 5px;
     margin-left: 15px;
 }
 
@@ -59,18 +59,21 @@ nav a{
     color: #FFFFFF;
     font-size: 23px;
     padding-bottom: 10px;
-    margin-top: 27px;
+    margin-top: 38px;
     margin-left: 160px;
     border: 3px solid #6B492B;
+    padding-top: 7px;
+    padding-right: 12px;
 }
 
 .corb_button img{
     width: 25px;
-    padding-left: 5px;
-    padding-top: 5px;
+    position: relative;
+    bottom: 27px;
+    left: 38px;
 }
 
-.null{
+.cart-counter{
     font-size: 21px;
     background-color: #FFFFFF;
     border: 3px solid #CFCFCF;
@@ -78,11 +81,14 @@ nav a{
     width: 20px;
     position: relative;
     border-radius: 25px;
-    padding-left: 8px;
+    padding-left: 7px;
     padding-top: 5px;
     color: #926239;
-    right: 15px;
-    bottom: 5px;
+    right: 17px;
+    bottom: 20px;
+    left: 30px;
+    padding-right: 7px;
+    padding-bottom: 2px;
 }
 
 main h1{
