--- a/css/corb_page.css
+++ b/css/corb_page.css
@@ -51,7 +51,7 @@ nav a{
     margin-left: 15px;
 }
 
-.cart-btn{
+.corb_button{
     background-color: #926239;
     width: 135px;
     height: 45px;
@@ -62,12 +62,15 @@ nav a{
     margin-top: 38px;
     margin-left: 160px;
     border: 3px solid #6B492B;
+    padding-top: 7px;
+    padding-right: 12px;
 }
 
-.cart-btn img{
+.corb_button img{
     width: 25px;
-    padding-left: 5px;
-    padding-top: 5px;
+    position: relative;
+    bottom: 27px;
+    left: 38px;
 }
 
 .cart-counter{
@@ -78,11 +81,14 @@ nav a{
     width: 20px;
     position: relative;
     border-radius: 25px;
-    padding-left: 8px;
+    padding-left: 7px;
     padding-top: 5px;
     color: #926239;
     right: 17px;
-    bottom: -19px;
+    bottom: 20px;
+    left: 30px;
+    padding-right: 7px;
+    padding-bottom: 2px;
 }
 
 .your_corb{
@@ -101,7 +107,7 @@ nav a{
     top: 185px;
 }
 
-main button{
+.place-order{
     color: #FFFFFF;
     font-size: 27px;
     background-color: #926239;
@@ -111,6 +117,7 @@ main button{
     position: relative;
     left: 170px;
     top: 175px;
+    text-decoration: none;
 }
 
 footer{
